--- a/planet.html
+++ b/planet.html
@@ -11,7 +11,6 @@
       href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Secular+One&display=swap"
       rel="stylesheet"
     />
-    <script src="js/planet.js" defer></script>
   </head>
   <body>
     <main>
@@ -40,5 +39,6 @@
       </section> -->
       </article>
     </main>
+    <script type="module" src="js/planet.js"></script>
   </body>
 </html>
