Added styling for the large planets that show up next to planet info

--- a/planet.html
+++ b/planet.html
@@ -14,7 +14,8 @@
   </head>
   <body>
     <main>
-      <div class="sun"></div>
+      <div class="planet"></div>
+      <div class="planet-ring"></div>
       <article class="planet-info">
         <!-- <h1 class="main-heading"></h1>
       <h2 class="sub-heading"></h2>
