Some clean up. Added more styling for the big planets.

--- a/index.html
+++ b/index.html
@@ -30,31 +30,41 @@
       </div>
     </header>
 
-    <!-- Gör en egen div för planeterna ist, så kan jag positionera solen 
-      och lägga margin på den diven eller padding runt hela sidan -->
-
+    <!-- Links to the planet pages styled as planets -->
     <main>
-      <!-- <div class="planet-container"> -->
-      <a href="planet.html?name=Solen" class="sun hover-planet"></a>
+      <a href="planet.html?name=Solen" class="sun hover-large-planet"></a>
       <a
         href="planet.html?name=Merkurius"
-        class="mercury br-50 hover-planet"
+        class="mercury br-50 hover-small-planet"
       ></a>
-      <a href="planet.html?name=Venus" class="venus br-50 hover-planet"></a>
-      <a href="planet.html?name=Jorden" class="earth br-50 hover-planet"></a>
-      <a href="planet.html?name=Mars" class="mars br-50 hover-planet"></a>
-      <a href="planet.html?name=Jupiter" class="jupiter br-50 hover-planet"></a>
-      <a href="planet.html?name=Saturnus" class="saturn br-50 hover-planet">
+      <a
+        href="planet.html?name=Venus"
+        class="venus br-50 hover-small-planet"
+      ></a>
+      <a
+        href="planet.html?name=Jorden"
+        class="earth br-50 hover-small-planet"
+      ></a>
+      <a href="planet.html?name=Mars" class="mars br-50 hover-small-planet"></a>
+      <a
+        href="planet.html?name=Jupiter"
+        class="jupiter br-50 hover-large-planet"
+      ></a>
+      <a
+        href="planet.html?name=Saturnus"
+        class="saturn br-50 hover-large-planet"
+      >
         <div class="saturn-ring"></div>
       </a>
-      <a href="planet.html?name=Uranus" class="uranus br-50 hover-planet"></a>
+      <a
+        href="planet.html?name=Uranus"
+        class="uranus br-50 hover-small-planet"
+      ></a>
       <a
         href="planet.html?name=Neptunus"
-        class="neptune br-50 hover-planet"
+        class="neptune br-50 hover-small-planet"
       ></a>
-      <!-- </div> -->
     </main>
-    <footer>This is not an accurate representation</footer>
     <script type="module" src="js/index.js"></script>
   </body>
 </html>
