--- a/planet.html
+++ b/planet.html
@@ -14,31 +14,11 @@
   </head>
   <body>
     <main>
+      <!-- Large planet next to the planet info that gets styling added from planet.js -->
       <div class="planet"></div>
       <div class="planet-ring"></div>
-      <article class="planet-info">
-        <!-- <h1 class="main-heading"></h1>
-      <h2 class="sub-heading"></h2>
-      <section>
-        <p></p>
-      </section>
-      <hr />
-      <section>
-        <h3>OMKRETS</h3>
-        <p></p>
-        <h3>KM FRÅN SOLEN</h3>
-        <p></p>
-        <h3>MAX TEMPERATUR</h3>
-        <p></p>
-        <h3>MIN TEMPERATUR</h3>
-        <p></p>
-      </section>
-      <hr />
-      <section>
-        <h3>MÅNAR</h3>
-        <p></p>
-      </section> -->
-      </article>
+      <!-- Planet info element that all the planet data gets added to -->
+      <article class="planet-info"></article>
     </main>
     <script type="module" src="js/planet.js"></script>
   </body>
