--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <button type="submit" class="search-button">Sök</button>
       </form>
       <div class="heading-container">
-        <h1 class="main-heading">SOLSYSTEMET</h1>
-        <h2 class="sub-heading">SOLARIS</h2>
+        <h1 class="main-heading transition-effect">SOLSYSTEMET</h1>
+        <h2 class="sub-heading transition-effect">SOLARIS</h2>
       </div>
     </header>
 
